; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/alpine-hal/extr_al_hal_serdes_hssp.c_al_serdes_lane_pcie_rate_set.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/alpine-hal/extr_al_hal_serdes_hssp.c_al_serdes_lane_pcie_rate_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.al_serdes_grp_obj = type { i32 }

@AL_SRDS_REG_TYPE_PCS = common dso_local global i32 0, align 4
@SERDES_IREG_FLD_PCS_VPCSIF_OVR_RATE_REG_NUM = common dso_local global i32 0, align 4
@SERDES_IREG_FLD_PCS_VPCSIF_OVR_RATE_MASK = common dso_local global i32 0, align 4
@SERDES_IREG_FLD_PCS_VPCSIF_OVR_RATE_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.al_serdes_grp_obj*, i32, i32)* @al_serdes_lane_pcie_rate_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @al_serdes_lane_pcie_rate_set(%struct.al_serdes_grp_obj* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.al_serdes_grp_obj*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.al_serdes_grp_obj* %0, %struct.al_serdes_grp_obj** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.al_serdes_grp_obj*, %struct.al_serdes_grp_obj** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @AL_SRDS_REG_TYPE_PCS, align 4
  %10 = load i32, i32* @SERDES_IREG_FLD_PCS_VPCSIF_OVR_RATE_REG_NUM, align 4
  %11 = load i32, i32* @SERDES_IREG_FLD_PCS_VPCSIF_OVR_RATE_MASK, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @SERDES_IREG_FLD_PCS_VPCSIF_OVR_RATE_SHIFT, align 4
  %14 = shl i32 %12, %13
  %15 = call i32 @al_serdes_grp_reg_masked_write(%struct.al_serdes_grp_obj* %7, i32 %8, i32 %9, i32 %10, i32 %11, i32 %14)
  ret void
}

declare dso_local i32 @al_serdes_grp_reg_masked_write(%struct.al_serdes_grp_obj*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
